--- a/Werkstuk versie 3.tex
+++ b/Werkstuk versie 3.tex
@@ -328,7 +328,7 @@
 	\section{Presentaties van congruente getallen}
 	Zoals we in hoofdstuk \ref{sec:def} al gezien hebben, bestaan er verschillende definities voor een congruent getal. Wij gebruiken hier de meetkundige definitie, waarbij een congruent getal afhangt van een Pythagore\"isch drietal. We zullen hieronder eerst uitleggen wat een presentatie is, daarna zullen we een voorbeeld geven van een presentatie.
 	
-	\subsection{Wat is een presentatie}\label{sec:presentaties}
+	\subsection{Wat is een presentatie?}\label{sec:presentaties}
 	Het Pythagore\"ische drietal dat bij een congruent getal hoort, heet de presentatie van het congruente getal. Zo is $(3,4,5)$ de presentatie van het congruente getal $6$. Oftewel,  de presentatie van een congruent getal $n$ is een drietal $(x,y,z)\in\QQ^3_{>0}$, zodat dit, met de meetkundige definitie, $n$ geeft.\\
 	
 	Het is belangrijk om hier op te merken dat een congruent getal meerdere presentaties heeft. Zo zijn $(21,20,29)$ en $(35,12,37)$ allebei presentaties van het congruente getal $210$ \cite{Oort}[p.9]. Sterker nog, ieder congruent getal heeft oneindig veel presentaties. We zullen dat hieronder bewijzen.\\
@@ -344,7 +344,7 @@
 	\end{theorem}
 	\noindent Deze stelling verklaart alvast de $k$ en $l$ in onze nieuwe presentatie $((k,l),D,n)$.\\
 	
-	De $D$ en $n$ zijn allebei positieve gehele getallen, afhankelijk van $k$ en $l$. Dat zit zo: $n=kl\cdot \frac{k^2-l^2}{D^2}$, waarbij $n$ een kwadraatvrij congruent getal is en $D$ is het getal dat ervoor zorgt dat $n$ inderdaad kwadraatvrij is.\footnote{Indien een $kl\cdot(k^2-l^2)$ al kwadraatvrij is, is de waarde van $D$ uiteraard gelijk aan 1.} Dus $((k,l),D,n)$ is een presentatie van $n$.\\
+	De $D$ en $n$ zijn allebei positieve gehele getallen, afhankelijk van $k$ en $l$. Dat zit zo: $n=kl\cdot \frac{k^2-l^2}{D^2}$, waarbij $n$ een kwadraatvrij congruent getal is en $D$ is het grootste positieve gehele getal waarvan het kwadraat een deler is van $kl\cdot (k^2-l^2)$. Dus $((k,l),D,n)$ is een presentatie van $n$.\\
 	
 	Nu we weten wat de presentatie $((k,l),D,n)$ inhoudt, kunnen we beginnen met het bewijzen van de volgende stelling.	
 	\begin{theorem}
@@ -363,11 +363,11 @@
 			&= 2xy \cdot z^2 (x - y)^2 (x + y)^2\\
 			&= 2 (k^2-l^2) \cdot 2kl (k^2+l^2)^2 (x - y)^2 (x + y)^2\\
 			&= (2 (k^2+l^2) (x-y) (x+y))^2 \cdot kl (k^2-l^2)\\
-			&= (2 z (x - y) (x + y))^2 \cdot d^2n\\
+			&= (2 z (x - y) (x + y))^2 \cdot D^2n\\
 			&= (2 z D (x - y) (x + y))^2 \cdot n
 		\end{align*}
 		
-		We hebben zo dus een nieuwe presentatie gevonden voor $n$, namelijk: $((p,q),E,n)$, met bijbehorend Pythagor\"isch drietal $(a,b,c)$. Zowel $p$ en $q$ als $(a,b,c)$ voldoen uiteraard aan de eisen die gesteld zijn in de stelling van Euclides.\\
+		We hebben zo dus een nieuwe presentatie gevonden voor $n$, die we $((p,q),E,n)$ noemen, met het bijbehorend Pythagor\"isch drietal $(a,b,c)$.\footnote{Hierbij hebben $p$ en $q$ dezelfde rol als $k$ en $l$, en $E$ vervangt $D$. Het congruente getal verandert niet, en is dus nog steeds $n$. $(a,b,c)$ is het bijbehorende Pythagore\"isch drietal, waarbij geldt dat $a=p^2-q^2$, $b=2pq$ en $c=p^2+q^2$.} Zowel $p$ en $q$ als $(a,b,c)$ voldoen uiteraard aan de eisen die gesteld zijn in de stelling van Euclides.\\
 		
 		Dat de gevonden presentatie niet gelijk is aan de originele, is te zien aan de constante $E$. Er geldt namelijk:
 		\begin{align*}
@@ -377,6 +377,8 @@
 			&> D.
 		\end{align*}
 		Dus $E > D$.\\
+		
+		We kunnen nu vervangers definiëren voor $U$ en $V$, behorende bij de nieuwe presentatie. We noemen deze $U'$ en $V'$. Ze zijn op dezelfde manier gedefini\"eerd, namelijk $U':=c^2=(p^2+q^2)^2$ en $V':=2ab=2\cdot(p^2-q^2)\cdot2pq$.\\
 		
 		We kunnen dezelfde berekeningen doen met $U'$ en $V'$. We krijgen dan weer een andere presentatie. Belangrijker nog, we krijgen de nieuwe constante $F$ waarvoor geldt: $F=|2 c E (a-b) (a+b)|.$ Uiteraard geldt dan dat $F > E$.\\
 		
