--- a/Werkstuk versie 3.tex
+++ b/Werkstuk versie 3.tex
@@ -144,36 +144,35 @@
 	Als $(x,y,z)$ een Pythagore\"isch drietal is met $\ggd(x,y) = 1$, dan $\ggd(x,z) = 1$
 	\end{theorem}
 	\begin{proof}
-	Stel, $\ggd(x,y) = g$, dan geldt
+	Stel, $\ggd(x,z) = d \geq 1$. Dan deelt $d$ zowel $x$ als $y$. Hieruit kunnen we als volgt concluderen dat $y$ ook door $d$ wordt gedeeld:
 	\begin{align*}
-	x = a \cdot g \text{ met } a \in \NN \\
-	y = b \cdot g \text{ met } b \in \NN
+	d\mid x \text{ en } d\mid z \\
+	d^2\mid x^2 \text{ en } d^2 \mid z^2 \\
+	d^2\mid z^2 - x^2 \text{ (want } z>x \text{)} \\
+	\text{dus, } d^2 \mid y^2 \text{ (uit $x^2 + y^2 = z^2$ volgt $y^2 = z^2 - x^2$)} \\
+	\text{dus, } d \mid y \\
+	\text{dus, } \ggd(x, y) \geq d \geq 1
 	\end{align*}
-	Deze notaties voor $x$ en $y$ kunnen we substitueren in de stelling van Pythagoras:
-	\begin{align*}
-	z^2=(a\cdot g)^2+(b\cdot g)^2\\
-	z^2 = g^2\cdot (a^2 + b^2)\\
-	z = g\cdot \sqrt{a^2 + b^2}
-	\end{align*}
-	Nu weten we dat $g$ in ieder geval een deler van $z$ is. Verder weten we dat $x$ wel $a$ als deler heeft, maar niet $b$. Als dat wel zo was, was $\ggd(x,y) = g*b$. Daarom is $g$ de grootste gemene deler van $x$ en $z$. Ditzelfde kan worden gedaan zonder verlies van algemeenheid voor $y$ en $z$.
+	Stel nu dat $\ggd(x, y) = 1$. Dit kan alleen zo zijn als $\ggd(x, z) $ ook gelijk aan $1$ is. 
 	\end{proof}	
 	Verder hebben primitieve Pythagore\"ische drietallen nog veel meer eigenschappen, die elk bewezen kunnen worden. Wij zullen nog een aantal van deze eigenschappen behandelen, te beginnen met welke getallen even, en welke getallen oneven zijn. Van $x$ en $y$ is er altijd \'e\'en getal even. Daardoor is $z$ altijd oneven.
 	\begin{proof}
-	Voor $x$ en $y$ zijn er 3 mogelijkheden: allebei even, allebei even of 1 van de 2 is even. De eerste mogelijkheid kunnen we snel afschrijven. Als $x$ en $y$ allebei even zouden zijn, dan is $\ggd(x,y) \neq 1$ want 2 is sowieso een deler. Om te bewijzen dat $x$ en $y$ niet allebei oneven kunnen zijn, nemen we eerst aan dat dat wel zo is:
+	Voor $x$ en $y$ zijn er 3 mogelijkheden: allebei even, allebei oneven of 1 van de 2 is even. De eerste mogelijkheid kunnen we snel afschrijven. Als $x$ en $y$ allebei even zouden zijn, dan is $\ggd(x,y) \neq 1$ want 2 is sowieso een deler. Om te bewijzen dat $x$ en $y$ niet allebei oneven kunnen zijn, nemen we eerst aan dat dat wel zo is:
 	\begin{align*}
-	x = 2k + 1\\
-	y = 2n + 1\\
+	x = 2s + 1\\
+	y = 2t + 1\\
 	\end{align*}
-	Uitwerken hiervan geeft dat $z^2$ een even getal is, en daarom $z$ ook (de som van 2 oneven getallen is weer even). We schrijven $z = 2m$
+	Uitwerken hiervan geeft dat $z^2$ een even getal is, en daarom $z$ ook (het kwadraat van een oneven getal is weer een oneven getal en de som van 2 oneven getallen is weer even). We schrijven $z = 2u$
 	\begin{align*}
 	x^2 + y^2 = z^2\\
-	(2k + 1)^2 + (2n + 1)^2 = (2m)^2\\
-	4k^2 + 4k + 1 +4n^2 + 4n + 1 = 4m^2\\
-	4(k^2 + k + n^2 + n) + 2 = 4m^2
+	(2s + 1)^2 + (2t + 1)^2 = (2u)^2\\
+	4s^2 + 4s + 1 +4t^2 + 4t + 1 = 4u^2\\
+	4(s^2 + s + t^2 + t) + 2 = 4u^2
 	\end{align*}
-	Als we beide kanten door 4 zouden delen, krijgen we een rest van 2 aan de linkerkant en een rest van 0 aan de rechterkant. Dit kan natuurlijk niet, dus $x$ en $y$ zijn niet allebei even.
+	Als we beide kanten door 4 zouden delen, krijgen we een rest van 2 aan de linkerkant en een rest van 0 aan de rechterkant. Dit kan natuurlijk niet, dus $x$ en $y$ zijn niet allebei oneven. \\
+	We kunnen nu concluderen dat $x$ en $y$ niet allebei even zijn, en ook niet allebei oneven zijn. Een van de getallen $x$ of $y$ moet dus per definitie oneven zijn en de ander moet per definitie even zijn. Hieruit volgt dat $z$ altijd een oneven getal is. $x^2$ is namelijk even en $y^2$ is oneven (of precies andersom, zonder verlies van algemeenheid). De som van een oneven en een even getal is een oneven getal, waardoor $z^2$ en $z$ oneven zijn.
 	\end{proof}
-	\cite{Posamentier}[p.156]Een derde eigenschap van een Pythagore\"isch drietal is dat $\frac{(z-x)(z-y)}{2}$ een kwadraat is. 
+	Een derde eigenschap van een Pythagore\"isch drietal is dat $\frac{(z-x)(z-y)}{2}$ een kwadraat is. \cite{Posamentier}[p.156]
 	
 	\begin{proposition}
 		\cite{Koblitz}[p.4, vertaald] Laat $n$ een vast kwadraatvrij positief getal zijn. Laat $x,y,z,\delta \in\QQ$ met $x<y<z$. Er is een \'e\'en op \'e\'en relatie tussen rechthoekige driehoeken met zijden $x$ en $y$, schuine zijde $z$ en oppervlakte $n$, en getallen $\delta$ waarvoor geldt dat $\delta$, $\delta +n$ en $\delta -n$ de kwadraten zijn van een rationaal getal. De correspondentie is:
